docusaurus/platform_versioned_docs/version-2.0/using-airbyte/getting-started/academy.md
---
products: all
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

# Airbyte Academy

Airbyte Academy is your home for concise, structured training courses. These free tutorials set you on the path to being a pro.

<Grid columns="2">
    <CardWithIcon title="Cloud fundamentals" description="In this course you will create a data pipeline using Airbyte Cloud, find existing Connectors in the Connector Marketplace, and learn best practices to create streams and move data between sources and destinations. In addition, you will learn how, using the new AI Assistant, you can create connections to any endpoint with no code." ctaText="Start learning Cloud" ctaLink="https://airbyteacademy.thinkific.com/products/courses/101-cloud-fundamentals?utm_source=airbytedocs" icon="fa-cloud" />
    <CardWithIcon title="Build an AI chatbot" description="In this course, you will use Stripe, Airbyte, Supabase, PGVector, and OpenAI to build an AI-powered chatbot to allow users to interact with e-commerce data. They will be able to ask natural language questions to uncover insights in the data." ctaText ="Start building AI apps" ctaLink="https://airbyteacademy.thinkific.com/courses/ai-chatbot?utm_source=airbytedocs" icon="fa-robot" />
</Grid>
<Grid columns="2">
    <CardWithIcon title="API" description="Coming soon!" icon="fa-lock" />
    <CardWithIcon title="Python" description="Coming soon!" icon="fa-lock" />
</Grid>
